# calculator

./: Cargo.toml  README.md  help_text.txt
calculator/: Cargo.toml
calculator/src/: display_block.rs  erasable.rs  erasable_cluster.rs  helpers.rs  lib.rs  main.rs  parsing_calculator.rs
calculator/src/calculation/: calculation_precision.rs  calculator.rs  helpers.rs  inexact.rs  mod.rs  parsers.rs  parsing_calculator.rs  rational_number.rs  wrapped_iter.rs
calculator/src/display/: display_block.rs  display_segment.rs  mod.rs  range.rs  range_divider.rs
calculator/src/input_parsing/: erasable.rs  erasable_cluster.rs  mod.rs
calculator/src/shared/: calculation_precision.rs  errors.rs  mod.rs  sign.rs
discriminant_as_static_str_macro/: Cargo.toml
discriminant_as_static_str_macro/src/: lib.rs
discriminant_as_static_str_macro/tests/: use_discriminant_as_static_str_works.rs
src/: erasable_cluster.rs  errors.rs  helpers.rs  lib.rs  main.rs  named_constants.rs  parsing_calculator.rs  rational_number.rs  sign.rs
striminant_macro/: Cargo.toml
striminant_macro/src/: lib.rs  parse_attribute_arguments.rs
striminant_macro/tests/: striminant_works.rs  use_discriminant_as_static_str_works.rs
