[lib]
proc-macro = true
name = "striminant_macro"

[package]
name = "striminant_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.100"
quote = "1.0.21"
strum = "0.24"
strum_macros = "0.24"
proc-macro2 = "1.0"
